<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_nav_community"
        android:title="@string/nav_community" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_nav_explore"
        android:title="@string/nav_explore" />

    <item
        android:id="@+id/creatorFragment"
        android:icon="@drawable/ic_nav_creator"
        android:title="@string/nav_creator" />

    <item
        android:id="@+id/chatListFragment"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
